src/test/ui/parser/raw/raw-str.stderr
error: unterminated raw string
  --> $DIR/raw_string.rs:2:13
   |
LL |     let x = r##"lol"#;
   |             ^^^ unterminated raw string
help: Raw string could be meant to end here
   |
LL |     let x = r##"lol"##;
   |                    ^^^
help: Raw string could be meant to end here
   |
LL | }"##
   |   ^^^

error: aborting due to previous error

